styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

body{
    background-color: #18181B;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

a{
    text-decoration: none;
}

nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 100%;
    margin: auto;
    padding: 2rem 10rem 2rem 10rem;
    position: relative;
    z-index: 4;
}

.hamburger{
    display: none;
    flex-direction: column;
    justify-content: center;
    gap: 6px;
    cursor: pointer;
}

.hamburger span{
    width: 30px;
    height: 3px;
    background: white;
    border-radius: 10px;
    transition: all .3s ease;
}

.sWelcome{
    font-size: 3rem;
    font-weight: 700;
    color: white;
}

.nav-links{
    display: flex;
    justify-content: center;
    gap: 3rem;
    position: relative;
}

.links{
    color: white;
    position: relative;
}

.btnContact{
    padding:1rem 2rem;
    color: white;
    background-color: rgb(0,119,255);
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: all 0.3s ease;
    font-size: 1rem;
}

.btnContact:hover{
    box-shadow: 0px 0px 20px rgb(0,119,255);
}

.nav-links a::after{
    content: '';
    position: absolute;
    height: 2px;
    width: 0;
    bottom: 0;
    left: 0;
    background-color: rgb(0, 119, 255);
    box-shadow: 0px 0px 10px rgb(0, 119, 255);
    transition: all 0.3s ease;
}

.nav-links a:hover::after{
    width: 100%;
}

.container{
    margin: auto;
    max-width: 100%;
    padding: 10rem 5rem 10rem 5rem;
    color:white;
    display: flex;
    justify-content: space-between;
    position: relative;
    z-index: 2;
}

.container img{
    z-index: 2;
}

.Content{
    z-index: 2;
    position: relative;
}

.blur{
    position: absolute;
    width: 700px;
    height: 700px;
    border-radius: 50%;
    background: radial-gradient(circle, rgba(0,119,255,0.55) 0%, rgba(0,119,255,0) 70%);
    filter: blur(40px);
    pointer-events: none;
    z-index: 1;
}

.container .blur{
    position: absolute;
    top: 0%;
    left: 0%;
    transform: translate(0%, -10%);
}

.AboutMe{
    color:white;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    margin: auto;
    max-width: 100%;
    gap: 3rem;
    padding: 0rem 10rem 0rem 10rem;
    position: relative;
}

.AboutMe h1{
    text-align: center;
}

.AboutMe .Content{
    align-self: center;
}

.AboutMe .blur{
    position: absolute;
    top: 50%;
    left: 28%;
    z-index: 0;
    transform: translate(-50%, -50%);
}

.imgAboutMe{
    max-width: 800px;
    object-fit: contain;
    position: relative;
    z-index: 9999;
}

.imgDelius{
    width: 100%;
    height: 100vh;
    object-fit: contain;
    z-index: 999;
}

.Resume{
    margin:auto;
    position: relative;
    justify-items: center;
    max-width: 1500px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 1000px;
    padding: 0rem 5rem 0rem 5rem;
    margin-top: 15rem;
    z-index: 9999;
}

.Border{
    z-index: -2000;
    width: 100%;
    height: calc(100vh - 2rem);
    position: relative;
    background-image: rgb(0, 119, 255);
    box-shadow: 0px 0px 150px rgb(0, 119, 255);
}

.docViewer{
    width: 100%;
    height: 100%;

}

.Resume h1{
    color: white;
    padding-bottom: 2rem;
}

.Projects{
    margin-top: 15rem;
    padding: 0rem 2rem 2rem 2rem;
}

.Projects h1{
    color: white;
    text-align: center;
    padding-bottom: 1rem;
}

.Box{
    padding: 2rem 2rem 2rem 2rem;
    max-width: 600px;
    margin: auto;
    background-color: #3d3d3da8;
    color: white;
    border-radius: 25px;
    text-align: center;
}

.Box h2{
    color: white;
    font-size: 2rem;
}

.Box .btnContact{
    padding:10px;
}

.ri-discord-fill{
    font-weight: 100;
}

.Skills{
    padding: 0rem 2rem 2rem 2rem;
    color:white;
    margin-top: 15rem;
    position: relative;
    z-index: -3;
}

.icon{
    font-size: 3rem;
}

.Skills .blur{
    z-index: -1;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.Skills h1{
    text-align: center;
    z-index: 2;
}

.card-box{
    margin: auto;
    display: flex;
    justify-content: center;
    gap: 2rem;
}

.card{
    justify-self: center;
    background-color: #3d3d3da8;
    max-width: 300px;
    padding: 1rem;
    border-radius: 10px;
}

.ContactMe{
    text-align: center;
    margin-top: 15rem;
    color:white;
    padding: 2rem 2rem 2rem 2rem;
}

.Information{
    display: flex;
    gap: 15rem;
    justify-content: center;
}


.link{
    font-size: 2rem;
    text-decoration: none;
    color: white;
    display: flex;
    gap:2rem;
    justify-content: center;
    align-items: center;
}

.link a{
    display: flex;
    justify-content: center;
    background-color: #3d3d3d;
    padding: 7px;
    border-radius: 50%;
    color: white;
    transition: all 0.3s ease;
}

.link a:hover{
    opacity: 0.6;
}

@media (min-width: 768px) and (max-width: 940px){

    .nav-links{
    gap: 1.5rem;
    }

    .sWelcome{
        font-size: 2rem;
    }

    .btnContact{
        padding: 1rem 1rem;
        font-size: 1rem;
    }

    .imgAboutMe{
        width: 500px;
    }
}

@media (min-width: 768px) and (max-width: 1155px){

    .container{
        padding: 10rem 1rem 10rem 1rem;
        position: relative;
    }

    .imgAboutMe{
        max-width: 600px;
    }

    nav{
        padding: 2rem 3rem 2rem 3rem;
    }

    .AboutMe{
        display: flex;
        max-height: 1000px;
        align-items: center;
        justify-content: space-between;
        position: relative;
        padding: 0rem 2rem 0rem 2rem;
        margin-bottom: 250px;
    }

    .AboutMe h1{
        text-align: center;
    }

    .Projects h1{
        text-align: center;
    }

    .imgDelius{
        width: 60%;
        object-fit: contain;
    }

    .container .Content{
       display: flex;
       flex-direction: column;
       align-items: center;
    }

    .AboutMe .Content{
        display: block;
    }

    .Resume{
        margin-top: 0rem;
    }

    .Box{
        text-align: center;
    }

    .Skills h1{
        text-align: center;
    }

    .card h2{
        text-align: center;
    }

    .card .icon{
        text-align: center;
    }

}

@media (max-width: 767px) {

    *{
        padding:0;
        margin:0;
        box-sizing: border-box;
    }

    body{
        margin:0;
        padding:0;
    }


    .links{
        width: 100%;
        text-align: center;
    }

    .nav-links.active{
        justify-content: center;
        width: 350px;
        margin:auto;
    }

    .nav-links{
        position: absolute;

        top: calc(100% + 15px);
        left: 50%;
        transform: translateX(-50%);

        width: 220px;

        display: none;
        flex-direction: column;
        align-items: stretch;
        gap: .5rem;

        padding: 1rem;

        background: rgba(33,33,38,.95);
        backdrop-filter: blur(15px);

        border-radius: 15px;
        border: 1px solid rgba(255,255,255,.08);
        box-shadow: 0 10px 40px rgba(0,0,0,.45);
        z-index: 1000;
    }

    .AboutMe .Content{
        z-index: 2;
    }

    .nav-links a{
        display:block;
        width:100%;
        padding:12px 18px;
        border-radius:10px;
        transition:.25s;
        color:white;
    }

    .nav-links a:hover{
        background:rgb(0,119,255);
        color:white;
    }

    nav{
        padding: 2rem 2rem 0rem 2rem;
        position: relative;
    }

    .imgAboutMe{
        width: 100%;
    }


    .docViewer{
        width: 100%;
    }

    .Resume{
        margin: 0;
        padding:10rem 1rem 0rem 1rem;
        width: 100%;
        position: relative;
        height: 900px;
    }

    .Information{
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    .section1{
        margin-bottom: 2rem;
    }

    .Border{
        position: relative;
        width: 100%;
        margin:0;
        height: 100%;
    }

    .btnContact{
        display:none;
    }

    .hamburger{
        display:flex;
        font-size:2rem;
        color:white;
        cursor:pointer;
    }

    .nav-links.active{
        display:flex;
    }

    .sWelcome{
        margin:auto;
        font-size: 3rem;
    }

    .container{
        display: block;
        padding: 10rem 2rem 15rem 2rem;
        position: relative;
    }

    .container .blur{
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -90%);
        width: 100vw;
    }

    .container .Content{
       display: flex;
       flex-direction: column;
       align-items: center;
    }


    .AboutMe h1{
        text-align: center;
    }

    .AboutMe{
        display: block;
        padding:0rem 2rem 0rem 2rem;
        position: relative;
    }

    .AboutMe .Content{
        padding-bottom: 2rem;
    }

    .AboutMe .blur{
        position: absolute;
        top: 25%;
        left: 50%;
        width: 100vw;
    }

    .Skills .blur{
        width: 100vw;
    }

    .imgDelius{
        width: 98%;
        object-fit: cover;
        position: relative;
        background-color: blue;
        padding:0;
        margin:0;
    }

    .card-box{
        flex-direction: column;
        align-items: center;
    }

    .card{
        width: 100%;
        max-width: none;
        position: relative;
    }

    .card h2{
        justify-self: center;
    }

    .icon{
        justify-self: center;
        display: block;
    }

    .Projects .btnContact{
        display: inline-block;
        width: fit-content;
        margin: 0 auto;
    }

    .Projects h1{
        text-align: center;
    }

    .card h2{
        text-align: center;
    }

    .card .icon{
        text-align: center;
    }

    .Information{
        width: 100%;
        display: flex;
        gap:0;
        justify-content: space-between;
    }

    .link{
        display: flex;
    }

    .Box{
        text-align: center;
    }

    .Skills h1{
        text-align: center;
    }
}

